# ts-lua-sp

./: .checkpatch  .clang-format  .cppcheck  .editorconfig  .gitignore  .readthedocs.yaml  README.md  license.rst  readme.rst  requirements.txt
components/common/libc/: CMakeLists.txt
components/common/libc/include/: asm_macros_common.S  assert.h  cdefs.h  ctype.h  libc_platform.h  locale.h  malloc.h  stdint.h  stdlib.h  string.h
components/common/libc/include/aarch64/: setjmp_.h  stdint_.h
components/common/libc/mock/: mock_libc.cpp  mock_libc.h
components/common/libc/src/: abort.c  assert.c  ctype.c  locale.c  strcoll.c  strcpy.c  strpbrk.c  strspn.c  strstr.c  strtod.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
components/common/libc/src/aarch64/: setjmp.S
deployments/: deployment.cmake
deployments/attestation/: attestation.cmake
deployments/attestation/config/default-opteesp/: CMakeLists.txt  default_attestation.dts.in
deployments/attestation/config/default-sp/: CMakeLists.txt  default_attestation.dts.in
deployments/block-storage/: block-storage.cmake
deployments/block-storage/config/default-opteesp/: CMakeLists.txt
deployments/block-storage/config/default-sp/: CMakeLists.txt  default_block-storage.dts.in
deployments/block-storage/config/edk2-secure-flash-opteesp/: CMakeLists.txt  optee_sp_user_defines.h
deployments/block-storage/config/semihosted-opteesp/: CMakeLists.txt
deployments/component-test/: component-test.cmake
deployments/component-test/arm-linux/: CMakeLists.txt
deployments/crypto/: crypto.cmake
deployments/crypto/config/default-opteesp/: CMakeLists.txt  default_crypto.dts.in
deployments/crypto/config/default-sp/: CMakeLists.txt  default_crypto.dts.in
deployments/env-test/: env-test.cmake
deployments/env-test/config/baremetal-fvp_base_revc-opteesp/: CMakeLists.txt  default_env-test.dts.in
deployments/env-test/config/baremetal-fvp_base_revc-sp/: CMakeLists.txt  default_env-test.dts.in
deployments/ftpm/: ftpm.cmake
deployments/ftpm/config/default-opteesp/: CMakeLists.txt  default_ftpm.dts.in  optee_sp_user_defines.h
deployments/ftpm/config/default-sp/: CMakeLists.txt  default_ftpm.dts.in
deployments/fwu/: fwu.cmake
deployments/fwu-tool/: file-block-store.cmake  fwu.cmake
deployments/fwu-tool/linux-pc/: CMakeLists.txt
deployments/internal-trusted-storage/: internal-trusted-storage.cmake
deployments/libpsats/: libpsats-import.cmake  libpsats.cmake  libpsatsConfig.cmake.in
deployments/libpsats/linux-pc/: CMakeLists.txt
deployments/libsp/opteesp/: CMakeLists.txt  LibspConfig.cmake.in
deployments/libts/: libts-import.cmake  libts.cmake  libtsConfig.cmake.in
deployments/libts/arm-linux/: CMakeLists.txt
deployments/libts/linux-pc/: CMakeLists.txt
deployments/logging/: logging.cmake
deployments/lua/: lua.cmake
deployments/lua-demo/: lua-demo.cmake  lua-demo.cpp
deployments/lua-demo/arm-linux/: CMakeLists.txt
deployments/lua-demo/linux-pc/: CMakeLists.txt
deployments/platform-inspect/: platform-inspect.cmake
deployments/platform-inspect/arm-linux/: CMakeLists.txt
deployments/platform-inspect/linux-pc/: CMakeLists.txt
deployments/protected-storage/: protected-storage.cmake
deployments/psa-api-test/: arch_test_runner.c  psa-api-test-config.cmake  psa-api-test.cmake  psa_api_test_common.h
deployments/se-proxy/: se-proxy.cmake
deployments/smm-gateway/: smm-gateway.cmake
deployments/spm-test1/opteesp/: CMakeLists.txt  default_spm_test1.dts.in
deployments/spm-test2/opteesp/: CMakeLists.txt  default_spm_test2.dts.in
deployments/spm-test4/opteesp/: CMakeLists.txt  default_spm_test4.dts.in
deployments/ts-demo/: ts-demo.c  ts-demo.cmake
deployments/ts-demo/linux-pc/: CMakeLists.txt
deployments/ts-fw-test/: ts-fw-test.cmake
deployments/ts-remote-test/: ts-remote-test.cmake  ts-remote-test.cpp
deployments/ts-remote-test/arm-linux/: CMakeLists.txt
deployments/ts-service-test/: ts-service-test.cmake
deployments/ts-service-test/arm-linux/: CMakeLists.txt
deployments/uefi-test/: uefi-test.cmake
deployments/uefi-test/arm-linux/: CMakeLists.txt
docs/: Makefile  conf.py  global_substitutions.txt  index.rst  requirements.txt
docs/certification/: index.rst  psa-certified.rst  system-ready.rst
docs/deployments/: index.rst  libraries.rst  secure-partitions.rst  test-executables.rst  tools-demo-apps.rst
docs/developer/: arch-overview.rst  b-test.rst  build-instructions.rst  docs-build.rst  index.rst  project-structure.rst  running-tests.rst  service-access-protocols.rst  service-deployment-model.rst  service-locator.rst  software-requirements.rst  spmc-tests.rst  supported-architectural-features.rst  writing-documentation.rst
docs/environments/: index.rst
docs/overview/: example-usage.rst  goals.rst  index.rst
docs/project/: change-log.rst  coding-guidelines.rst  contributing.rst  glossary.rst  index.rst  license.rst  maintainers.rst  releases.rst  version_control.rst  versioning_policy.rst
docs/quickstart/: index.rst  optee-testing.rst  pc-testing.rst
docs/security/: index.rst  security-model.rst
docs/services/: attest-service-description.rst  crypto-service-description.rst  index.rst  logging-service-description.rst  secure-storage-service-description.rst  tpm-service-description.rst  uefi-smm-services.rst
docs/target-platforms/: Corstone1000.rst  aem-fvp.rst  index.rst  rd1ae.rst
docs/uml/: colors.puml  libsp_functions.puml  style-component.puml
environments/arm-linux/: component.cmake  default_toolchain_file.cmake  env.cmake  env_shared_lib.cmake  link_options.cmake  posix_trace.c
environments/linux-pc/: component.cmake  default_toolchain_file.cmake  env.cmake  env_shared_lib.cmake  posix_trace.c
environments/opteesp/: component.cmake  default_toolchain_file.cmake  env.cmake  optee_sp_header.c  sp.ld.S  sp.mk.in  sp_assert.c  sp_entry.c  sp_pkg.json.in  sp_trace.c
environments/sp/: component.cmake  default_toolchain_file.cmake  entry.S  env.cmake  newlib_init.c  sp.ld.S  sp_entry.c  sp_pkg.json.in  sp_trace.c
platform/interface/: device_region.h  (+4 more)
(+1478 files in other folders)
